--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: "Montserrat";
     src: url(../fontes/Montserrat-Regular.ttf);
@@ -10,59 +9,136 @@
 }
 
 
-body{
+body {
     margin: 0;
     padding: 0;
-     font-family: "Montserrat";
+    font-family: "Montserrat";
 
 }
 
 
-.navbar-brand .logo{
-width: 6rem;
+.navbar-brand .logo {
+    width: 6rem;
 
 
 }
 
-.navbar-nav li{
-margin-right: 24px;
-font-size: 16px;
-font-weight: 700;
+.navbar-nav li {
+    margin-right: 24px;
+    font-size: 16px;
+    font-weight: 700;
 
 }
 
-.navbar-nav li a{
-    color:#000;
+.navbar-nav li a {
+    color: #000;
 }
 
 
 
 
-.banner{
+.banner {
     height: 470px;
-    background-image: url("../img/estrutura/banner.png") ;
+    background-image: url("../img/estrutura/banner.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
 
 }
 
-.texto_banner{
-width: 600px;
-padding-top: 70px;
-font-family: "MontserratExtraBold" !important;
-color: #000;
+.texto_banner {
+    width: 600px;
+    padding-top: 70px;
+    font-family: "MontserratExtraBold" !important;
+    color: #000;
 
 }
 
-.texto_banner h1{
+.texto_banner h1 {
 
-font-size: 2.4rem;
+    font-size: 2.4rem;
 
 }
 
-.texto_banner h1 .slogan{
+.texto_banner h1 .slogan {
 
-    color:#fcc600;
+    color: #fcc600;
     font-weight: 900;
+}
+.div_titulo{
+width: 600px;
+text-align: center;
+
+}
+.titulo{
+font-family: "MontserratExtraBold";
+
+font-size: 30px;
+font-weight: 900;
+padding-top: 40px;
+padding-bottom: 35px;
+
+}
+
+.box_vantagem {
+
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img_box {
+
+
+    height: 210px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.texto_box {
+margin-top: 15px;
+    text-align: center;
+    font-weight: 700;
+    width: 300px;
+
+}
+
+.img_box img {
+    width: 343px;
+}
+
+#seguranca {
+
+    width: 204px;
+}
+
+#pessoas {
+
+    width: 210px;
+}
+
+.section_delivery{
+    height: 525px;
+
+    background-color: #FFF4CC;
+}
+
+.apresentacao{
+margin-top: 40px;
+/* margin-bottom: 100px; */
+
+
+}
+
+.img_apres img{ 
+width: 300px;
+
+}
+
+.tex_apres{
+  text-align: justify;
+   
+
 }
