--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,11 @@ box-shadow: -2px 4px 14px 2px gray;
 
 
 }
+footer{
+
+    width: 100%;
+
+}
 
 .linha{
 border-right:1px solid #000 ;
@@ -263,13 +268,63 @@ border-right:1px solid #000 ;
     background-image: url("../img/estrutura/rodape.png");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 550px;
-     display: flex;
+    height: 520px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center; 
+}
+.texto_rodape{
+    display: flex;
+   align-content: center;
+   font-weight:900;
+}
+
+.menu_rodape{
+
+    list-style-type: none;
+    display: flex;
+  align-items: center;
+  font-weight:900;
+}
+
+  .texto_segundo{
+    font-weight:900;
+   
+
+  }
+   
+
+
+
+.menu_rodape li{
+    padding-right: 20px;
+
+}
+.rodape2{
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 70px;
+    display: flex;
     justify-content: center;
-    align-items: flex-end; 
+    align-items: center;
 }
+.icone{
 
+    display: flex;
+    list-style-type: none;
+    
+    }
 
-.meunu_rodape li{
-    text-decoration: none;
-}
+    .icone li{
+
+        padding-right: 32px;
+        display: flex;
+        align-items: center;
+    }
+    
+    .icone li i{
+
+        font-size: 35px;
+
+    }
